txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4637,12 +4637,12 @@ This is valid if $\exists c>0\text{ s.t. }0\leq g(x)<c$ for $\every x\in[a,b]$. 
 	\label{fig:screenshot067}
 \end{figure}
 Let $(X,Y)$ be a random couple uniformly distributed on $\Omega$:
-\begin{equation}
+\begin{equation*}
 	f_{(X,Y)}(x,y)=\begin{cases}
 		\frac{1}{c(b-a)}&\text{if }(x,y)\in\Omega\\
 		0&\text{otherwise}.
 	\end{cases}
-\end{equation}
+\end{equation*}
 Define $p$ as
 \begin{align*}
 	p&=\pr((X,Y)\in S)\\
