txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4807,6 +4807,10 @@ In this case we have
 \begin{equation*}
 	I=\int_{0}^{1}\frac{2}{\sqrt{1+x}}\cdot\frac{1}{s\sqrt{x}}\dx,\quad f_X(x)=\frac{1}{2\sqrt{x}}\indi_{[0,1]}(x).
 \end{equation*}
+Hence we have 
+\begin{equation*}
+	I=\ev{\frac{2}{\sqrt{1+x}}}\qquad\text{with }X\sim f_X\sim U^{2},\qquad U\distunif{[0,1]}
+\end{equation*}
 \listoffigures  
 \end{document} 
 
