txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4805,7 +4805,7 @@ We need to compute the second moment
 and so we have infinite variance which means $\infty$ confidence interval which means kill yourself.
 In this case we have 
 \begin{equation*}
-	I=\int_{0}^{1}\frac{2}{\sqrt{1+x}}\cdot\frac{1}{s\sqrt{x}}\dx,\quad f_X(x)=\frac{1}{2\sqrt{x}}\indi_{[0,1]}(x).
+	I=\int_{0}^{1}\frac{2}{\sqrt{1+x}}\cdot\frac{1}{2\sqrt{x}}\dx,\quad\text{take } f_X(x)=\frac{1}{2\sqrt{x}}\indi_{[0,1]}(x).
 \end{equation*}
 Hence we have 
 \begin{equation*}
