txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4820,7 +4820,8 @@ and we can apply the CLT for $\frac{2}{\sqrt{1+u^{2}}$ with $U\distunif{[0,1]}$.
 \begin{equation*}
 	\vartheta_2=\frac{1}{n}\sum_{k=1}^{n}\frac{1}{\sqrt{1+u_{k}^{2}}}
 \end{equation*}
-with $U_k\overset{i.i.d.}{\sim}\mathsf{U}([0,1])$.
+with $U_k\overset{i.i.d.}{\sim}\mathsf{U}([0,1])$.\par
+To reduce the variance we can 
 \listoffigures  
 \end{document} 
 
