txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4816,7 +4816,7 @@ This new expectation has finite variance and is thus safe for Monte-Carlo:
 \begin{equation*}
 	\ev{\frac{2}{1+x}}^{2}=4\int_{0}^{1}\frac{1}{1+x}\cdot\frac{1}{2\sqrt{x}}\dx<\infty
 \end{equation*}
-and we can apply the CLT for $\frac{2}{\sqrt{1+u^{2}}$ with $U\distunif{[0,1]}$. $I$ is well approximated by
+and we can apply the CLT for $\frac{2}{\sqrt{1+u^{2}}}$ with $U\distunif{[0,1]}$. $I$ is well approximated by
 \begin{equation*}
 	\vartheta_2=\frac{1}{n}\sum_{k=1}^{n}\frac{1}{\sqrt{1+u_{k}^{2}}}
 \end{equation*}
