--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4821,7 +4821,7 @@ and we can apply the CLT for $\frac{2}{\sqrt{1+u^{2}}}$ with $U\distunif{[0,1]}$
 	\vartheta_2=\frac{1}{n}\sum_{k=1}^{n}\frac{1}{\sqrt{1+u_{k}^{2}}}
 \end{equation*}
 with $U_k\overset{i.i.d.}{\sim}\mathsf{U}([0,1])$.\par
-To reduce the variance we can 
+To reduce the variance we can use \emph{importance sampling}. The aim is to choose $f_X$
 \listoffigures  
 \end{document} 
 
