txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4841,6 +4841,9 @@ To reduce the variance we can use \emph{importance sampling}. The aim is to choo
 		&=\ev{\left(\frac{g(x)}{f_X(x)}\right)^{2}}.
 	\end{align*}
 \end{fancyproof}
+If $f_X(x)\approx|g(x)|$ then we are close to minimizing. ``High values'' based on $g$ should be sampler more frequently.\par
+Another way of controlling variance is using the \emph{stratification method}.
+\subsection{Variance reduction: Control Variable method}
 \listoffigures  
 \end{document} 
 
