--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4844,6 +4844,7 @@ To reduce the variance we can use \emph{importance sampling}. The aim is to choo
 If $f_X(x)\approx|g(x)|$ then we are close to minimizing. ``High values'' based on $g$ should be sampler more frequently.\par
 Another way of controlling variance is using the \emph{stratification method}.
 \subsection{Variance reduction: Control Variable method}
+Here we have $I=\ev{Y}$ for some $Y$ and $\vartheta_2=\frac{1}{b}\sum_{k=1}^{n}Y_k$.
 \listoffigures  
 \end{document} 
 
