txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4887,6 +4887,7 @@ For $X\distnorm{0,1}$, $\mathcal{L}\{X\}$ is known:
 \begin{equation*}
 	\ev{e^{\lambda X}}=e^{\frac{\lambda^{2}}{2}}\qquad\every\lambda\in\mathbb{C}.
 \end{equation*}
+\section{Simulation of a \bwm}
 \listoffigures  
 \end{document} 
 
