txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4888,6 +4888,17 @@ For $X\distnorm{0,1}$, $\mathcal{L}\{X\}$ is known:
 	\ev{e^{\lambda X}}=e^{\frac{\lambda^{2}}{2}}\qquad\every\lambda\in\mathbb{C}.
 \end{equation*}
 \section{Simulation of a \bwm}
+\subsection{Recap and definitions}
+\begin{definition}
+	\emph{Invariance property}:
+	\begin{equation*}
+		{(B_{ct})}_{t\in[0,\infty)}\sim{(\sqrt{c}B_{t})}_{t\in[0,\infty]}.
+	\end{equation*}
+\end{definition}
+The one-dimensional \bwm{} is the unique Gaussian process with continuous trajectories such that $\ev{B_{s}B_{t}}=s\wedge t$.
+\begin{fancyproof}
+	This is the proof of both of these properties.
+\end{fancyproof}
 \listoffigures  
 \end{document} 
 
