txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4906,6 +4906,7 @@ The one-dimensional \bwm{} is the unique Gaussian process with continuous trajec
 		\end{bmatrix}&\sim\frac{1}{(2\pi)^{\frac{n}{2}}\sqrt{\prod_{j=1}^{n}(t_{j}-t_{j-1})}}e^{-\unmezz\sum_{j=1}^{n}\frac{(x_{j}-x_{j-1})^{2}}{t_{j}-t_{j-1}}}\dif\mathbf{x}\\
 		&=\frac{1}{(2\pi)^{\frac{n}{2}}\sqrt{\mathsf{det}\Sigma}}e^{-\unmezz\langle\mathbf{x},\Sigma^{-1}\mathbf{x}\rangle}\dif\mathbf{x}
 	\end{align*}
+	with $\Sigma=[t_{j}\wedge t_{k}]^{n}_{j,k=1}$
 \end{fancyproof}
 \listoffigures  
 \end{document} 
