--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4909,7 +4909,10 @@ The one-dimensional \bwm{} is the unique Gaussian process with continuous trajec
 	with $\Sigma=[t_{j}\wedge t_{k}]^{n}_{j,k=1}$ (recall the Schilling book).
 \end{fancyproof}
 A $d-$dimensional \bwm{} is characterized by $d$ independent one-dimensional \bwm s.\par
-The issue with simulating a Brownian path with a computer is that time is continuous. We will make use of the above properties to simulate a one-dimensional \bwm{} and a $d$-dimensional in general.
+The issue with simulating a Brownian path with a computer is that time is continuous. We will make use of the above properties to simulate a one-dimensional \bwm{} and a $d$-dimensional in general. We introduce a time grid on $[0,T]$
+\begin{equation*}
+	0=t_{0}<\ubracketthin{t_{1}}_{\frac{T}{n}}<\ldots<\ubracketthin{t_{n-1}}_{\frac{n-1}{n}T}<\ubracketthin{t_{n}}_{T}.
+\end{equation*}
 \listoffigures  
 \end{document} 
 
