txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4919,7 +4919,10 @@ We need to simulate a random vector $\begin{bmatrix}
 	\vdots\\
 	B_{t_{n}}
 \end{bmatrix}\distnorm{\mathbf{0},\frac{T}{n}\begin{bmatrix}
-	1&\cdots&\cdots
+	1&\cdots&\cdots&1\\
+	\vdots&2&\cdots&\cdots\\
+	\vdots&\vdots&\ddots&\cdots\\
+	1&\cdots&\cdots&n
 	\end{bmatrix}}$
 \listoffigures  
 \end{document} 
