txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4929,6 +4929,7 @@ We need to simulate a random vector $\begin{bmatrix}
 	\begin{equation*}
 		X\distnorm{\mathbf{0},I}\implies Y:=AX\distnorm{\mathbf{0},\Gamma}.
 	\end{equation*}
+	A positive, semi definite matrix admits infinite square roots (i.e. such that $AA^{\trsp}=\Gamma$) but there exists a unique lower triangular matrix $A$ such that  $AA^{\trsp}=\Gamma$. This matrix is called the \emph{Cholesky matrix}\footnote{In Python, use \texttt{numpy.linalg.cholesky}}.
 \end{revise}
 \listoffigures  
 \end{document} 
