txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4932,7 +4932,14 @@ We need to simulate a random vector $\begin{bmatrix}
 	A positive, semi definite matrix admits infinite square roots (i.e. such that $AA^{\trsp}=\Gamma$) but there exists a unique lower triangular matrix $A$ such that  $AA^{\trsp}=\Gamma$. This matrix is called the \emph{Cholesky matrix}\footnote{In Python, use \texttt{numpy.linalg.cholesky}}.
 \end{revise}
 \begin{fancyproof}
-	$\Gamma$ is symmetric, so there exists an orthogonal $U$ such that $\Gamma=UDU^{\trsp}$ with $D=\mathsf{diag}(\ubracketthin{\lambda_{1},\ldots,\lambda_{n}}_{\claptext{eigenvalues of $\Gamma$}})$.
+	$\Gamma$ is symmetric, so there exists an orthogonal $U$ such that $\Gamma=UDU^{\trsp}$ with $D=\mathsf{diag}(\ubracketthin{\lambda_{1},\ldots,\lambda_{n}}_{\claptext{eigenvalues of $\Gamma$}})$. Recall that $\Gamma$ is positive semi-definite and this is equivalent to saying that $\lambda_i\geq0$ for $\every i=1,\ldots,n$. If we define 
+	\begin{equation*}
+		D_{1}=\begin{bmatrix}
+			\sqrt{\lambda_{1}}&&0\\
+			&\ddots&\\
+			0&&\sqrt{\lambda_{n}}
+		\end{bmatrix}
+	\end{equation*}
 \end{fancyproof}
 \listoffigures  
 \end{document} 
