txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4946,11 +4946,19 @@ We need to simulate a random vector $\begin{bmatrix}
 		&=U\ubracketthin{D_{1}D_{1}}_{=D}U^{\trsp}\\
 		&=UDU^{\trsp}=\Gamma.
 	\end{align*}
-	Si the existence is proven. Since $X\distnorm{\mathbf{0},I}$ 
-	\begin{equation*}
-		\var(AX)=A(\var X)A^{\trsp}=AA^{\trsp}=\Gamma.
-	\end{equation*}
+	So the existence is proven.
 \end{fancyproof}
+ Since $X\distnorm{\mathbf{0},I}$ 
+\begin{equation*}
+	\var(AX)=A(\var X)A^{\trsp}=AA^{\trsp}=\Gamma.
+\end{equation*} In the case of a \bwm{} the Cholesky of $[j\wedge k]^{n}_{j,k=1}$ is 
+\begin{equation*}
+	\begin{bmatrix}
+		1&\ldots&0\\
+		\vdots&\ddots&\vdots\\
+		1&\ldots&1
+	\end{bmatrix}
+\end{equation*}
 \listoffigures  
 \end{document} 
 
