txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4957,7 +4957,19 @@ We need to simulate a random vector $\begin{bmatrix}
 		1&\ldots&0\\
 		\vdots&\ddots&\vdots\\
 		1&\ldots&1
-	\end{bmatrix}
+	\end{bmatrix}.
+\end{equation*} Try with $\begin{bmatrix}
+1&0\\
+1&1
+\end{bmatrix}$. Hence
+\begin{equation*}
+	\Gamma=\sqrt{\frac{T}{n}}\cdot\ubracketthin{\begin{bmatrix}1&\ldots&0\\
+		\vdots&\ddots&\vdots\\
+		1&\ldots&1
+	\end{bmatrix}}_{n\times n}\begin{bmatrix}1&\ldots&1\\
+\vdots&\ddots&\vdots\\
+0&\ldots&1
+\end{bmatrix}}_{n\times n}
 \end{equation*}
 \listoffigures  
 \end{document} 
