txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4975,6 +4975,7 @@ The direct calculation is:
 \begin{equation*}
 	B_{t_{1}},\ldots,B_{t_{n}}=\left(B_{t_{1}},B_{t_{2}}-B_{t_{1}}+B_{t_{1}},\ldots,B_{t_{1}}+\sum_{j=2}^{n}(B_{t_{j}}-B_{t_{j-1}})\right)
 \end{equation*}
+so we only generate normal i.i.d random variables.
 \listoffigures  
 \end{document} 
 
