txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -5007,7 +5007,16 @@ so we only generate normal i.i.d random variables.
 		\begin{equation*}
 			\ev{\sup_{t\in[0,T]}|B_{t}-\hat{B}_{t}|}\leq\ev{\sup_{t\in[0,T]}|B_{t}-\hat{B}_{t}|^{p}}^{\frac{1}{p}}.
 		\end{equation*}
-		Let $A$ be a positive \rv{} with a density which decreases exponentially fast
+		Let $A$ be a positive \rv{} with a density which decreases exponentially fast. Then
+		\begin{align*}
+			\ev{A^{p}}&=\int_{0}^{\infty}y^{p}f_{A}(y)\dy\\
+			&=p\int_{0}^{\infty}y^{p-1}\pr(A\geq y)\dy.
+		\end{align*}
+		We can use this fact to say that
+		\begin{align*}
+			\ev{\sup_{t\in[0,T]}|B_{t}-\hat{B}_{t}|^{p}}^{\frac{1}{p}}&\leq\left(p\int_{0}^{\infty}\delta^{p-1}\ubracketthin{\frac{4n}{\sqrt{2\pi}}\int_{\frac{\delta\sqrt{n}}{\sqrt{t}}}^{\infty}e^{-\frac{y^{2}}{2}}\dy}_{\pr(A\geq\delta)}\dif\delta\right)\\
+			\text{by Fubini }&\leq\left(p\int_{0}^{\infty}\int_{0}^{\infty}\delta^{p-1}\frac{4n}{\sqrt{2\pi}}\indig{\delta\leq\frac{y\sqrt{t}}{\sqrt{n}}}e^{-\frac{y^{2}}{2}}\dy\dif\delta\right)^{\frac{1}{p}}
+		\end{align*}
 	\end{enumerate}
 \end{fancyproof}
 \listoffigures  
